# ml_text_sililarity

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/core/: consts.py  preprocess.py  text_similarity.py  visualization.py
src/core/text_similarity_algos/: preprocess.py  text_similarity.py  text_similarity_bert.py  text_similarity_tf_idf.py
