[tool.poetry]
name = "ml-text-sililarity"
version = "0.1.0"
description = ""
authors = ["mborodada <mboroda@lytvynov-production.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
wordcloud = "^1.9.3"
matplotlib = "^3.9.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
